--- a/static/scss/_alphabet.scss
+++ b/static/scss/_alphabet.scss
@@ -6,7 +6,7 @@
   position: relative;
   display: block;
   padding: 0 5px;
-  font: normal 16px/51px 'helveticaneuecyrbold';
+  font: normal 16px/50px 'helveticaneuecyrbold';
   text-align: center;
   text-transform: uppercase;
   text-decoration: none;
@@ -25,6 +25,6 @@
   bottom: 6px;
   background: url(../images/ico/reset-white.png) 50% 0 no-repeat $color-blue;
 }
-.alphabet  a.color {
+.alphabet  a.blue {
   margin-top: 18px;
 }
