--- a/static/scss/_colors.scss
+++ b/static/scss/_colors.scss
@@ -10,10 +10,14 @@ $color-bg-blue: #c9f3ff;
 $color-bg-grey: #f7f7f7;
 
 $color-border-orange: #e78800;
+$color-border-grey: #c3c3c3;
 
 $color-link-black: #231f20;
 $color-link-blue: #35c1ea;
 
 $color-text-grey: #787d82;
+
+$color-gradient-grey: #d3d3d3;
+$color-gradient-grey-light: #ececec;
 
 $color-bxslider-grey: #dedede;
