--- a/static/scss/_content.scss
+++ b/static/scss/_content.scss
@@ -7,10 +7,8 @@ body {
   padding: 0 20px;
 }
 .sidebar {
-  float: left;
   width: 220px;
 }
-.right-content {
-  float: right;
+.content {
   width: 700px;
 }
