--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -4,13 +4,12 @@
 @import "_colors";
 @import "_mixins";
 @import "_reset";
-@import "_global";
 @import "_header";
 @import "_footer";
 @import "_content";
 @import "_titles";
 @import "_tables";
-@import "_buttons";
+@import "_forms";
 @import "_search-form";
 @import "_promo";
 @import "_sections";
@@ -34,3 +33,5 @@
 @import "_layers";
 @import "_cards";
 @import "_bxslider";
+@import "_chart";
+@import "_global";
