--- a/templates/brand.html
+++ b/templates/brand.html
@@ -8,7 +8,7 @@
 			</div>
 		</div>
 		<div class="float-cont">
-			<div class="sidebar">
+			<div class="sidebar fleft">
 				<div class="filter-cont sh">
 					<div class="catalog-title">Royal Canin</div>
 					<div class="filter-block opened default-opened">
@@ -66,49 +66,16 @@
 					</div>
 				</div>	
 			</div>
-			<div class="right-content">
+			<div class="content fright">
 				<div class="bn sh"><img src="static/images/upload/bn.png" alt=""/></div>
 
-				<h1>Лучшее из Royal Canin</h1>
+				<h1 class="v1">Лучшее из Royal Canin</h1>
 
 				<div class="catalog sh show-category mb36">
 					<div class="p20 float-cont">
 						<div class="line">
-							<div class="catalog-item">
-								<div class="quick-view-btn">
-									<span class="qv"></span>Быстрый просмотр
-								</div>
-								<div class="catalog-item-img">
-									<a href=""><img src="static/images/upload/c1.jpg" alt=""/></a>
-								</div>
-								<div class="catalog-item-brand"><a href="">OZ-Pet</a></div>
-								<div class="catalog-item-title"><a href="">Корм универсальный для собак</a></div>
-								<div class="float-cont">
-									<div class="catalog-item-price">
-										<div class="fs11">Цена</div>
-										<select class="select2-complex">
-											<option selected data-volume="2,5 кг">725 Р</option>
-											<option data-volume="1 кг">320 Р</option>
-											<option data-volume="0,5 кг">150 Р</option>
-										</select>
-									</div>
-									<div class="catalog-item-count">
-										<div class="fs11">Кол-во</div>
-										<select class="select2">
-											<option>1</option>
-											<option>2</option>
-											<option>3</option>
-											<option>4</option>
-											<option>5</option>
-										</select>
-									</div>
-								</div>	
-								<div class="btn-cont"><a href="" class="btn">Купить</a></div>
-								<div class="catalog-item-category">
-									В категории
-									<div class="catalog-item-category-link"><a href="">Уход за зубами</a>, <a href="">Лакомство для собак</a></div>
-								</div>
-							</div>
+
+							//= includes/_catalog-item.html
 
 							<div class="catalog-sep"></div>
 
