--- a/templates/brands.html
+++ b/templates/brands.html
@@ -1,17 +1,15 @@
 //= includes/_header.html
 
 <div class="width">
-	<div class="float-cont">
-		<div class="breadcrumb fleft">
-			<a href="" class="bread">Главная</a><span class="sep">/</span>
-			<a href="" class="bread-current">Каталог брендов</a>
-		</div>
+	<div class="breadcrumb">
+		<a href="" class="bread">Главная</a><span class="sep">/</span>
+		<a href="" class="bread-current">Каталог брендов</a>
 	</div>
 	<h1>Каталог брендов</h1>
-	<div class="sh-box no-float mb40">
-		<div class="sh-box-pad-lr sh-box-panel">
+	<div class="sh mb40">
+		<div class="sh-panel plr20">
 			<div class="alphabet">
-				<a href="#" class="fright color">Все</a>
+				<a href="#" class="fright blue">Все</a>
 				<ul>
 					<li class="alphabet-item"><a href="#" class="alphabet-link">0-9</a></li><!--
 					--><li class="alphabet-item"><a href="#" class="alphabet-link">a</a></li><!--
@@ -48,7 +46,7 @@
 				</ul>
 			</div>
 		</div>
-		<div class="sh-box-pad-lr">
+		<div class="plr20">
 			<div class="brands">
 				<div class="brand-section">
 					<div class="brand-column brand-section-name">0-9</div><!--
