--- a/templates/catalog_breed.html
+++ b/templates/catalog_breed.html
@@ -8,7 +8,7 @@
 			</div>
 		</div>
 		<div class="float-cont">
-			<div class="sidebar">
+			<div class="sidebar fleft">
 				<div class="breed-cont popup-cont">
 					<a href="#" class="popup-btn btn-big btn breed-btn active" data-yoffset="50">Малая аппенинская гончая</a>
 					<div class="tip-layer">
@@ -64,8 +64,8 @@
 					</ul>
 				</div>
 			</div>
-			<div class="right-content">
-				<h1 class="v2">Все для Малой аппенинской гончей</h1>
+			<div class="content fright">
+				<h1 class="v3">Все для Малой аппенинской гончей</h1>
 
 				<div class="sh catalog subcatalog">
 					<div class="subcatalog-title float-cont">
