--- a/templates/filter.html
+++ b/templates/filter.html
@@ -18,7 +18,7 @@
 		</div>
 	</div>
 	<div class="float-cont">
-		<div class="sidebar">
+		<div class="sidebar fleft">
 			<div class="breed-cont popup-cont">
 				<a href="#" class="popup-btn btn-big btn breed-btn" data-yoffset="50">Выбрать породу</a>
 				<div class="tip-layer">
@@ -92,8 +92,8 @@
 				</div>
 			</div>
 		</div>
-		<div class="right-content">
-			<h1>Корма</h1>
+		<div class="content fright">
+			<h1 class="v1">Корма</h1>
 			<div class="quick-variant float-cont bx-cont">
 				<div class="bxslider">
 					<div class="quick-slide-sh">
