--- a/templates/index_login.html
+++ b/templates/index_login.html
@@ -256,7 +256,7 @@
 						<li><a href="">Лежаки, домики</a></li>
 						<li><a href="">Ошейники, поводки</a></li>
 					</ul>
-					<a href="" class="color">Все подразделы</a>
+					<a href="" class="blue">Все подразделы</a>
 				</div>
 				<div class="col fright">
 					<div class="col-title">Производители</div>
@@ -268,7 +268,7 @@
 						<li><a href="">Pedigree</a></li>
 						<li><a href="">Royal Canin</a></li>
 					</ul>
-					<a href="" class="color">Все производители</a>
+					<a href="" class="blues">Все производители</a>
 				</div>
 			</div>
 		</div>
@@ -289,7 +289,7 @@
 						<li><a href="">Лежаки, домики</a></li>
 						<li><a href="">Когтеточки</a></li>
 					</ul>
-					<a href="" class="color">Все подразделы</a>
+					<a href="" class="blue">Все подразделы</a>
 				</div>
 				<div class="col fright">
 					<div class="col-title">Производители</div>
@@ -301,7 +301,7 @@
 						<li><a href="">Pedigree</a></li>
 						<li><a href="">Royal Canin</a></li>
 					</ul>
-					<a href="" class="color">Все производители</a>
+					<a href="" class="blue">Все производители</a>
 				</div>
 			</div>
 		</div>
@@ -320,7 +320,7 @@
 						<li><a href="">Наполнители, сено, опилки</a></li>
 						<li><a href="">Игрушки</a></li>
 					</ul>
-					<a href="" class="color">В каталог для грызунов</a>
+					<a href="" class="blue">В каталог для грызунов</a>
 				</div>
 			</div>
 		</div>
@@ -339,7 +339,7 @@
 						<li><a href="">Оборудование</a></li>
 						<li><a href="">Препараты</a></li>
 					</ul>
-					<a href="" class="color">В каталог для рыбок</a>
+					<a href="" class="blue">В каталог для рыбок</a>
 				</div>
 			</div>
 		</div>
@@ -358,7 +358,7 @@
 						<li><a href="">Витамины</a></li>
 						<li><a href="">Игрушки</a></li>
 					</ul>
-					<a href="" class="color">В каталог для птиц</a>
+					<a href="" class="blue">В каталог для птиц</a>
 				</div>
 			</div>
 		</div>
@@ -377,7 +377,7 @@
 						<li><a href="">Витамины</a></li>
 						<li><a href="">Игрушки</a></li>
 					</ul>
-					<a href="" class="color">В каталог для рептилий</a>
+					<a href="" class="blue">В каталог для рептилий</a>
 				</div>
 			</div>
 		</div>
