--- a/static/scss/_boxes.scss
+++ b/static/scss/_boxes.scss
@@ -18,12 +18,6 @@
 .sh-box-pad {
   padding: 19px;
 }
-.sh-box-pad-lr {
-  padding: 0 19px;
-}
-.sh-box-panel {
-  background-color: $color-bg-grey;
-}
 .sh-box.no-float {
   float: none;
   margin-right: 0;
@@ -92,6 +86,16 @@ img.adv {
 }
 .tab-box.selected {
   display: block;
+}
+
+.sh-panel {
+  background-color: $color-bg-grey;
+}
+.sh-panel_top {
+  border-radius: 5px 5px 0 0;
+}
+.sh-panel_bottom{
+  border-radius: 0 0 5px 5px;
 }
 
 .sh.def-color {
