--- a/static/scss/_global.scss
+++ b/static/scss/_global.scss
@@ -46,13 +46,16 @@
 .p20 {
   padding: 20px;
 }
+.ptb20 {
+  padding: 20px 0;
+}
+.plr20 {
+  padding: 0 20px;
+}
 .pl20 {
   padding-left: 20px;
 }
 
-a.color {
-  color: $color-link-blue;
-}
 a.blue {
   color: $color-link-blue;
 }
