--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -8,7 +8,7 @@
 		</div>
 	</div>
 	<div class="float-cont">
-		<div class="sidebar">
+		<div class="sidebar fleft">
 			<div class="breed-cont popup-cont">
 				<a href="#" class="popup-btn btn-big btn breed-btn" data-yoffset="50">Выбрать породу</a>
 				<div class="tip-layer">
@@ -97,8 +97,8 @@
 				</div>
 			</div>
 		</div>
-		<div class="right-content">
-			<h1 class="v1">Каталог для собак</h1>
+		<div class="content fright">
+			<h1 class="v2">Каталог для собак</h1>
 
 			<div class="main-catalog float-cont">
 				<div class="main-catalog-item">
