--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
 						<li><a href="">Лежаки, домики</a></li>
 						<li><a href="">Ошейники, поводки</a></li>
 					</ul>
-					<a href="" class="color">Все подразделы</a>
+					<a href="" class="blue">Все подразделы</a>
 				</div>
 				<div class="col fright">
 					<div class="col-title">Производители</div>
@@ -53,7 +53,7 @@
 						<li><a href="">Pedigree</a></li>
 						<li><a href="">Royal Canin</a></li>
 					</ul>
-					<a href="" class="color">Все производители</a>
+					<a href="" class="blue">Все производители</a>
 				</div>
 			</div>
 		</div>
@@ -74,7 +74,7 @@
 						<li><a href="">Лежаки, домики</a></li>
 						<li><a href="">Когтеточки</a></li>
 					</ul>
-					<a href="" class="color">Все подразделы</a>
+					<a href="" class="blue">Все подразделы</a>
 				</div>
 				<div class="col fright">
 					<div class="col-title">Производители</div>
@@ -86,7 +86,7 @@
 						<li><a href="">Pedigree</a></li>
 						<li><a href="">Royal Canin</a></li>
 					</ul>
-					<a href="" class="color">Все производители</a>
+					<a href="" class="blue">Все производители</a>
 				</div>
 			</div>
 		</div>
@@ -105,7 +105,7 @@
 						<li><a href="">Наполнители, сено, опилки</a></li>
 						<li><a href="">Игрушки</a></li>
 					</ul>
-					<a href="" class="color">В каталог для грызунов</a>
+					<a href="" class="blue">В каталог для грызунов</a>
 				</div>
 			</div>
 		</div>
@@ -124,7 +124,7 @@
 						<li><a href="">Оборудование</a></li>
 						<li><a href="">Препараты</a></li>
 					</ul>
-					<a href="" class="color">В каталог для рыбок</a>
+					<a href="" class="blue">В каталог для рыбок</a>
 				</div>
 			</div>
 		</div>
@@ -143,7 +143,7 @@
 						<li><a href="">Витамины</a></li>
 						<li><a href="">Игрушки</a></li>
 					</ul>
-					<a href="" class="color">В каталог для птиц</a>
+					<a href="" class="blue">В каталог для птиц</a>
 				</div>
 			</div>
 		</div>
@@ -162,7 +162,7 @@
 						<li><a href="">Витамины</a></li>
 						<li><a href="">Игрушки</a></li>
 					</ul>
-					<a href="" class="color">В каталог для рептилий</a>
+					<a href="" class="blue">В каталог для рептилий</a>
 				</div>
 			</div>
 		</div>
