--- a/templates/search_result.html
+++ b/templates/search_result.html
@@ -8,7 +8,7 @@
 			</div>
 		</div>
 		<div class="float-cont">
-			<div class="sidebar">
+			<div class="sidebar fleft">
 				<div class="filter-cont sh">
 					<div class="catalog-title">Фильтр</div>
 					<div class="filter-block opened default-opened">
@@ -84,8 +84,8 @@
 					</div>
 				</div>	
 			</div>
-			<div class="right-content">
-				<h1>Результаты поиска</h1>
+			<div class="content fright">
+				<h1 class="v1">Результаты поиска</h1>
 				
 				<div class="catalog sh show-category">
 					<div class="search-top">
