--- a/static/scss/_chart.scss
+++ b/static/scss/_chart.scss
@@ -151,7 +151,7 @@
 
   .text {
     line-height: 21px;
-    color: #787d82;
+    color: $color-text-grey;
   }
   .number {
     font: 21px/28px 'helveticaneuecyrbold';
