--- a/static/scss/_global.scss
+++ b/static/scss/_global.scss
@@ -72,7 +72,9 @@ a.underline:hover {
 .semibold {
   font-family: 'opensanssemibold';
 }
-
+.helveticabold {
+  font-family: 'helveticaneuecyrbold';
+}
 .fs11 {
   font-size: 11px;
 }
