--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -27,7 +27,7 @@
 @import "_popups";
 @import "_tags";
 @import "_autocomplete";
-@import "_tips";
+@import "_hints";
 @import "_alphabet";
 @import "_brands";
 @import "_layers";
