--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -9,14 +9,9 @@
 	</div>
 	<div class="float-cont">
 		<div class="sidebar fleft">
-			<div class="breed-cont popup-cont">
-				<a href="#" class="popup-btn btn-big btn breed-btn" data-yoffset="50">Выбрать породу</a>
-				<div class="tip-layer">
-					<div class="tip-corner"></div>
-					<div class="tip-content">
-						У нас есть специальные товары для некоторых пород. Выберите породу и посмотрите!
-					</div>
-				</div>
+			<div class="breed-cont popup-cont tip-wrap">
+				<a href="#" class="popup-btn btn-big btn breed-btn tip-init" data-yoffset="50">Выбрать породу</a>
+				<div class="tip tip_atop">У нас есть специальные товары для некоторых пород. Выберите породу и посмотрите!</div>
 				<div class="popup-layer">
 					<div class="popup-inner">
 						<form>
@@ -148,13 +143,13 @@
 			</div>
 			<div class="tabs-cont">
 				<div class="float-cont">
-					<ul class="tabs">
+					<ul class="tabs fleft">
 						<li class="first selected">Новинки<span class="sh-fix"></span></li>
 						<li>Топ-20<span class="sh-fix"></span></li>
 						<li class="last">Распродажа<span class="sh-fix"></span></li>
 					</ul>
 				</div>
-				<div class="tab-box selected float-cont">
+				<div class="tab-box tab-box_top selected float-cont">
 					<div class="catalog-item">
 						<div class="quick-view-btn">
 							<span class="qv"></span>Быстрый просмотр
@@ -268,8 +263,8 @@
 					</div>
 
 				</div>
-				<div class="tab-box">контент2...</div>
-				<div class="tab-box">контент3...</div>
+				<div class="tab-box tab-box_top">контент2...</div>
+				<div class="tab-box tab-box_top">контент3...</div>
 			</div>
 
 			<div class="sh p20 def-color">
