--- a/templates/catalog_breed.html
+++ b/templates/catalog_breed.html
@@ -9,13 +9,9 @@
 		</div>
 		<div class="float-cont">
 			<div class="sidebar fleft">
-				<div class="breed-cont popup-cont">
-					<a href="#" class="popup-btn btn-big btn breed-btn active" data-yoffset="50">Малая аппенинская гончая</a>
-					<div class="tip-layer">
-						<div class="tip-corner"></div>
-						<div class="tip-content">
-							Мы отобрали товары специально для этой породы!
-						</div>
+				<div class="breed-cont popup-cont tip-wrap">
+					<a href="#" class="popup-btn btn-big btn breed-btn tip-init active" data-yoffset="50">Малая аппенинская гончая</a>
+					<div class="tip tip_atop">Мы отобрали товары специально для этой породы!</div>
 					</div>
 					<div class="popup-layer">
 						<div class="popup-inner">
