--- a/templates/index_login.html
+++ b/templates/index_login.html
@@ -76,13 +76,13 @@
 
 	<div class="tabs-cont">
 		<div class="float-cont">
-			<ul class="tabs">
+			<ul class="tabs fleft">
 				<li class="first selected">Новинки<span class="sh-fix"></span></li>
 				<li>Топ-20<span class="sh-fix"></span></li>
 				<li class="last">Распродажа<span class="sh-fix"></span></li>
 			</ul>
 		</div>
-		<div class="tab-box selected float-cont">
+		<div class="tab-box tab-box_top selected float-cont">
 			<div class="catalog-item">
 				<div class="quick-view-btn">
 					<span class="qv"></span>Быстрый просмотр
@@ -235,8 +235,8 @@
 			
 
 		</div>
-		<div class="tab-box">контент2...</div>
-		<div class="tab-box">контент3...</div>
+		<div class="tab-box tab-box_top">контент2...</div>
+		<div class="tab-box tab-box_top">контент3...</div>
 	</div>
 
 	<div class="float-cont">
