--- a/templates/shopping_chart.html
+++ b/templates/shopping_chart.html
@@ -106,7 +106,7 @@
                     </table>
                     <div class="chart_row ptb20">
                         <span class="chart_desc">Если у вас есть промо-код или купон, укажите его здесь:</span><!--
-                        --><span class="chart_input"><input type="text" class="text-form" /></span><!--
+                        --><span class="chart_input"><input type="text" class="text-box" /></span><!--
                         --><span class="chart_button"><a href="#" class="btn btn_grey">Пересчитать</a></span>
                     </div>
                     <div class="chart_row ptb20">
@@ -114,7 +114,7 @@
                             <b>У вас есть 1013 бонусов</b>
                             <span>Если вы хотите использовать их для оплаты, укажите количество бонусов</span>
                         </span><!--
-                        --><span class="chart_input"><input type="text" value="512" class="text-form" /></span><!--
+                        --><span class="chart_input"><input type="text" value="512" class="text-box" /></span><!--
                         --><span class="chart_button"><a href="#" class="btn btn_grey">Пересчитать</a></span>
                     </div>
                     <div class="chart_row chart_cost">Стоимость товаров: 1380 Р</div>
