--- a/static/scss/_tabs.scss
+++ b/static/scss/_tabs.scss
@@ -1,40 +1,81 @@
 ul.tabs {
-  float: left;
   background: $color-bg-blue;
   border-radius: 5px 5px 0 0;
+
+  li {
+    float: left;
+    box-sizing: border-box;
+    background: $color-bg-blue;
+    text-align: center;
+    padding: 0 33px;
+    height: 40px;
+    line-height: 40px;
+    border-left: 1px solid #a7d7e5;
+    cursor: pointer;
+    margin-left: -1px;
+
+    &.first {
+      border-radius: 5px 0 0 0;
+      margin-left: 0;
+      border-left: 0;
+    }
+    &.last {
+      border-right: none;
+      border-radius: 0 5px 0 0;
+    }
+    &.selected {
+      background: $color-white;
+      box-shadow: 0 5px 7px 1px rgba(0,0,0,0.25);
+      border-radius: 5px 5px 0 0;
+      position: relative;
+
+      .sh-fix {
+        position: absolute;
+        width: 100%;
+        height: 3px;
+        background: $color-white;
+        bottom: 0;
+        left: 0;
+        z-index: 10;
+      }
+    }
+  }
 }
-ul.tabs li {
-  float: left;
-  background: $color-bg-blue;
-  text-align: center;
-  padding: 0 33px;
-  height: 40px;
-  line-height: 40px;
-  border-left: 1px solid #a7d7e5;
-  cursor: pointer;
-  margin-left: -1px;
-}
-ul.tabs li.first {
-  border-radius: 5px 0 0 0;
-  margin-left: 0;
-  border-left: 0;
-}
-ul.tabs li.last {
-  border-right: none;
-  border-radius: 0 5px 0 0;
-}
-ul.tabs li.selected {
-  background: $color-white;
-  box-shadow: 0 5px 7px 1px rgba(0,0,0,0.25);
-  border-radius: 5px 5px 0 0;
-  position: relative;
-}
-ul.tabs li.selected .sh-fix {
-  position: absolute;
+
+ul.tabs_wide {
   width: 100%;
-  height: 3px;
+  background: $color-bg-blue;
+  border-radius: 5px 5px 0 0;
+
+  li {
+    width: 20%;
+    height: 120px;
+    padding-top: 20px;
+    line-height: 16px;
+    text-align: center;
+
+    &.last {
+      width: 192px;
+    }
+  }
+}
+
+.tabs_img {
+  margin-bottom: 4px;
+}
+
+.tab-box {
+  display: none;
+  position: relative;
+  z-index: 5;
+}
+.tab-box.selected {
+  display: block;
+}
+.tab-box_top {
+  border-radius: 0 0 5px 5px;
+  box-shadow: 0 5px 7px 1px rgba(0,0,0,0.25);
   background: $color-white;
-  bottom: 0;
-  left: 0;
-  z-index: 10;
+  margin-bottom: 20px;
+  padding: 15px 21px 20px;
 }
