--- a/static/scss/_titles.scss
+++ b/static/scss/_titles.scss
@@ -12,25 +12,30 @@ h1, .h1 {
   font-weight: normal;
   margin-bottom: 24px;
   line-height: 1em;
-}
-h1.v1,
-.h1.v1 {
-  margin-bottom: 15px;
-  padding-top: 2px;
-}
-h1.v2,
-.h1.v2 s{
-  padding-top: 10px;
-  margin-bottom: 40px;
-}
-h1.v3,
-.h1.v3 {
-  margin-bottom: 22px;
+
+  &.v1 {
+    margin-bottom: 15px;
+    padding-top: 2px;
+  }
+  &.v2 {
+    padding-top: 10px;
+    margin-bottom: 40px;
+  }
+  &.v3 {
+    margin-bottom: 22px;
+  }
 }
 
-h2 {
+h2, .h2 {
   font-family: 'helveticaneuecyrbold';
   font-weight: normal;
+
+  &.v1 {
+    margin-bottom: 15px;
+  }
+  &.v2 {
+    padding-top: 5px;
+  }
 }
 
 h3, .h3 {
