--- a/templates/filter.html
+++ b/templates/filter.html
@@ -19,14 +19,9 @@
 	</div>
 	<div class="float-cont">
 		<div class="sidebar fleft">
-			<div class="breed-cont popup-cont">
-				<a href="#" class="popup-btn btn-big btn breed-btn" data-yoffset="50">Выбрать породу</a>
-				<div class="tip-layer">
-					<div class="tip-corner"></div>
-					<div class="tip-content">
-						У нас есть специальные товары для некоторых пород. Выберите породу и посмотрите!
-					</div>
-				</div>
+			<div class="breed-cont popup-cont tip-wrap">
+				<a href="#" class="popup-btn btn-big btn breed-btn tip-init" data-yoffset="50">Выбрать породу</a>
+				<div class="tip tip_atop">У нас есть специальные товары для некоторых пород. Выберите породу и посмотрите!</div>
 				<div class="popup-layer">
 					<div class="popup-inner">
 						<form>
