Подправила страницу брендов

--- a/templates/brands.html
+++ b/templates/brands.html
@@ -9,40 +9,39 @@
 	<div class="sh mb40">
 		<div class="sh-panel plr20">
 			<div class="alphabet">
-				<a href="#" class="fright blue">Все</a>
 				<ul>
-					<li class="alphabet-item"><a href="#" class="alphabet-link">0-9</a></li><!--
-					--><li class="alphabet-item"><a href="#" class="alphabet-link">a</a></li><!--
-					--><li class="alphabet-item"><a href="#" class="alphabet-link active">b</a></li><!--
-					--><li class="alphabet-item"><a href="#" class="alphabet-link">c</a></li><!--
-					--><li class="alphabet-item"><a href="#" class="alphabet-link">d</a></li><!--
-					--><li class="alphabet-item"><a href="#" class="alphabet-link">e</a></li><!--
-					--><li class="alphabet-item"><a href="#" class="alphabet-link">f</a></li><!--
-					--><li class="alphabet-item"><a href="#" class="alphabet-link">g</a></li><!--
-					--><li class="alphabet-item"><a href="#" class="alphabet-link">h</a></li><!--
-					--><li class="alphabet-item"><a href="#" class="alphabet-link">o</a></li><!--
-					--><li class="alphabet-item"><a href="#" class="alphabet-link">p</a></li><!--
-					--><li class="alphabet-item"><a href="#" class="alphabet-link">r</a></li><!--
-					--><li class="alphabet-item"><a href="#" class="alphabet-link">s</a></li><!--
-					--><li class="alphabet-item"><a href="#" class="alphabet-link">t</a></li><!--
-					--><li class="alphabet-item"><a href="#" class="alphabet-link">u</a></li><!--
-					--><li class="alphabet-item"><a href="#" class="alphabet-link">v</a></li><!--
-					--><li class="alphabet-item"><a href="#" class="alphabet-link">w</a></li><!--
-					--><li class="alphabet-item"><a href="#" class="alphabet-link">x</a></li><!--
-					--><li class="alphabet-item"><a href="#" class="alphabet-link">z</a></li><!--
-					--><li class="alphabet-item"><a href="#" class="alphabet-link">а</a></li><!--
-					--><li class="alphabet-item"><a href="#" class="alphabet-link">в</a></li><!--
-					--><li class="alphabet-item"><a href="#" class="alphabet-link">г</a></li><!--
-					--><li class="alphabet-item"><a href="#" class="alphabet-link">д</a></li><!--
-					--><li class="alphabet-item"><a href="#" class="alphabet-link">и</a></li><!--
-					--><li class="alphabet-item"><a href="#" class="alphabet-link">к</a></li><!--
-					--><li class="alphabet-item"><a href="#" class="alphabet-link">л</a></li><!--
-					--><li class="alphabet-item"><a href="#" class="alphabet-link">м</a></li><!--
-					--><li class="alphabet-item"><a href="#" class="alphabet-link">н</a></li><!--
-					--><li class="alphabet-item"><a href="#" class="alphabet-link">о</a></li><!--
-					--><li class="alphabet-item"><a href="#" class="alphabet-link">р</a></li><!--
-					--><li class="alphabet-item"><a href="#" class="alphabet-link">с</a></li><!--
-					--><li class="alphabet-item"><a href="#" class="alphabet-link">т</a></li>
+					<li class="alphabet_letter">0-9</li><!--
+					--><li class="alphabet_letter">a</li><!--
+					--><li class="alphabet_letter">b</li><!--
+					--><li class="alphabet_letter">c</li><!--
+					--><li class="alphabet_letter">d</li><!--
+					--><li class="alphabet_letter">e</li><!--
+					--><li class="alphabet_letter">f</li><!--
+					--><li class="alphabet_letter">g</li><!--
+					--><li class="alphabet_letter">h</li><!--
+					--><li class="alphabet_letter">o</li><!--
+					--><li class="alphabet_letter">p</li><!--
+					--><li class="alphabet_letter">r</li><!--
+					--><li class="alphabet_letter">s</li><!--
+					--><li class="alphabet_letter">t</li><!--
+					--><li class="alphabet_letter">u</li><!--
+					--><li class="alphabet_letter">v</li><!--
+					--><li class="alphabet_letter">w</li><!--
+					--><li class="alphabet_letter">x</li><!--
+					--><li class="alphabet_letter">z</li><!--
+					--><li class="alphabet_letter">а</li><!--
+					--><li class="alphabet_letter">в</li><!--
+					--><li class="alphabet_letter">г</li><!--
+					--><li class="alphabet_letter">д</li><!--
+					--><li class="alphabet_letter">и</li><!--
+					--><li class="alphabet_letter">к</li><!--
+					--><li class="alphabet_letter">л</li><!--
+					--><li class="alphabet_letter">м</li><!--
+					--><li class="alphabet_letter">н</li><!--
+					--><li class="alphabet_letter">о</li><!--
+					--><li class="alphabet_letter">р</li><!--
+					--><li class="alphabet_letter">с</li><!--
+					--><li class="alphabet_letter">т</li>
 				</ul>
 			</div>
 		</div>
