--- a/static/scss/_brands.scss
+++ b/static/scss/_brands.scss
@@ -1,3 +1,17 @@
+.alphabet {}
+.alphabet_letter {
+  display: inline-block;
+  padding: 0 5px;
+  font: normal 16px/50px 'helveticaneuecyrbold';
+  text-transform: uppercase;
+  cursor: pointer;
+
+  &:hover {
+    background-color: $color-blue;
+    color: $color-white;
+  }
+}
+
 .brands{}
 .brand-section {
   border-bottom: 1px solid $color-grey-light;
